gen/MyGrammarParser.py
# Generated from C:/Users/mahdi/PycharmProjects/pythonProject/MyGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyGrammarParser ( Parser ):

    grammarFileName = "MyGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'}'", "';'", "','", "'return'", "'int'", "'boolean'", 
                     "'if'", "'else'", "'while'", "'System.out.println'", 
                     "'='", "'.'", "'length'", "'true'", "'false'", "'this'", 
                     "'new'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IDENTIFIER", "INTEGER_LITERAL", 
                      "Binary_operators", "WS", "LineComment", "MultiLineComment" ]

    RULE_goal = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_formalList = 5
    RULE_type = 6
    RULE_statement = 7
    RULE_expression = 8
    RULE_identifier = 9

    ruleNames =  [ "goal", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "formalList", "type", "statement", 
                   "expression", "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    IDENTIFIER=30
    INTEGER_LITERAL=31
    Binary_operators=32
    WS=33
    LineComment=34
    MultiLineComment=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GoalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(MyGrammarParser.MainClassContext,0)


        def EOF(self):
            return self.getToken(MyGrammarParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoal" ):
                listener.enterGoal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoal" ):
                listener.exitGoal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoal" ):
                return visitor.visitGoal(self)
            else:
                return visitor.visitChildren(self)




    def goal(self):

        localctx = MyGrammarParser.GoalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_goal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.mainClass()
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 21
                self.classDeclaration()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 27
            self.match(MyGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,i)


        def statement(self):
            return self.getTypedRuleContext(MyGrammarParser.StatementContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = MyGrammarParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(MyGrammarParser.T__0)
            self.state = 30
            self.identifier()
            self.state = 31
            self.match(MyGrammarParser.T__1)
            self.state = 32
            self.match(MyGrammarParser.T__2)
            self.state = 33
            self.match(MyGrammarParser.T__3)
            self.state = 34
            self.match(MyGrammarParser.T__4)
            self.state = 35
            self.match(MyGrammarParser.T__5)
            self.state = 36
            self.match(MyGrammarParser.T__6)
            self.state = 37
            self.match(MyGrammarParser.T__7)
            self.state = 38
            self.match(MyGrammarParser.T__8)
            self.state = 39
            self.match(MyGrammarParser.T__9)
            self.state = 40
            self.identifier()
            self.state = 41
            self.match(MyGrammarParser.T__10)
            self.state = 42
            self.match(MyGrammarParser.T__1)
            self.state = 43
            self.statement()
            self.state = 44
            self.match(MyGrammarParser.T__11)
            self.state = 45
            self.match(MyGrammarParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,0)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = MyGrammarParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(MyGrammarParser.T__0)
            self.state = 48
            self.identifier()
            self.state = 49
            self.match(MyGrammarParser.T__1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1073938432) != 0):
                self.state = 50
                self.varDeclaration()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 56
                self.methodDeclaration()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(MyGrammarParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MyGrammarParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = MyGrammarParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.type_()
            self.state = 65
            self.identifier()
            self.state = 66
            self.match(MyGrammarParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MyGrammarParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,0)


        def expression(self):
            return self.getTypedRuleContext(MyGrammarParser.ExpressionContext,0)


        def formalList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.FormalListContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.FormalListContext,i)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = MyGrammarParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(MyGrammarParser.T__2)
            self.state = 69
            self.type_()
            self.state = 70
            self.identifier()
            self.state = 71
            self.match(MyGrammarParser.T__6)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1073938432) != 0):
                self.state = 72
                self.formalList()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 73
                    self.match(MyGrammarParser.T__13)
                    self.state = 74
                    self.formalList()
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 82
            self.match(MyGrammarParser.T__10)
            self.state = 83
            self.match(MyGrammarParser.T__1)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 84
                    self.varDeclaration() 
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1077149700) != 0):
                self.state = 90
                self.statement()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(MyGrammarParser.T__14)
            self.state = 97
            self.expression(0)
            self.state = 98
            self.match(MyGrammarParser.T__12)
            self.state = 99
            self.match(MyGrammarParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MyGrammarParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_formalList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalList" ):
                listener.enterFormalList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalList" ):
                listener.exitFormalList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalList" ):
                return visitor.visitFormalList(self)
            else:
                return visitor.visitChildren(self)




    def formalList(self):

        localctx = MyGrammarParser.FormalListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formalList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.type_()
            self.state = 102
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammarParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArrayTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)


    class BooleanTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanType" ):
                listener.enterBooleanType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanType" ):
                listener.exitBooleanType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanType" ):
                return visitor.visitBooleanType(self)
            else:
                return visitor.visitChildren(self)


    class IdTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdType" ):
                listener.enterIdType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdType" ):
                listener.exitIdType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdType" ):
                return visitor.visitIdType(self)
            else:
                return visitor.visitChildren(self)


    class IntTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntType" ):
                listener.enterIntType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntType" ):
                listener.exitIntType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntType" ):
                return visitor.visitIntType(self)
            else:
                return visitor.visitChildren(self)



    def type_(self):

        localctx = MyGrammarParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = MyGrammarParser.ArrayTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MyGrammarParser.T__15)
                self.state = 105
                self.match(MyGrammarParser.T__8)
                self.state = 106
                self.match(MyGrammarParser.T__9)
                pass

            elif la_ == 2:
                localctx = MyGrammarParser.BooleanTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(MyGrammarParser.T__16)
                pass

            elif la_ == 3:
                localctx = MyGrammarParser.IntTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(MyGrammarParser.T__15)
                pass

            elif la_ == 4:
                localctx = MyGrammarParser.IdTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammarParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MyGrammarParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStat" ):
                listener.enterBlockStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStat" ):
                listener.exitBlockStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStat" ):
                return visitor.visitBlockStat(self)
            else:
                return visitor.visitChildren(self)


    class PrintStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MyGrammarParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStat" ):
                listener.enterPrintStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStat" ):
                listener.exitPrintStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStat" ):
                return visitor.visitPrintStat(self)
            else:
                return visitor.visitChildren(self)


    class AssignStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,0)

        def expression(self):
            return self.getTypedRuleContext(MyGrammarParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStat" ):
                listener.enterAssignStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStat" ):
                listener.exitAssignStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)


    class ArrayStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayStat" ):
                listener.enterArrayStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayStat" ):
                listener.exitArrayStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayStat" ):
                return visitor.visitArrayStat(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MyGrammarParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(MyGrammarParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStat" ):
                listener.enterWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStat" ):
                listener.exitWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = MyGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = MyGrammarParser.BlockStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(MyGrammarParser.T__1)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1077149700) != 0):
                    self.state = 113
                    self.statement()
                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 119
                self.match(MyGrammarParser.T__11)
                pass

            elif la_ == 2:
                localctx = MyGrammarParser.IfStatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(MyGrammarParser.T__17)
                self.state = 121
                self.match(MyGrammarParser.T__6)
                self.state = 122
                self.expression(0)
                self.state = 123
                self.match(MyGrammarParser.T__10)
                self.state = 124
                self.statement()
                self.state = 125
                self.match(MyGrammarParser.T__18)
                self.state = 126
                self.statement()
                pass

            elif la_ == 3:
                localctx = MyGrammarParser.WhileStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.match(MyGrammarParser.T__19)
                self.state = 129
                self.match(MyGrammarParser.T__6)
                self.state = 130
                self.expression(0)
                self.state = 131
                self.match(MyGrammarParser.T__10)
                self.state = 132
                self.statement()
                pass

            elif la_ == 4:
                localctx = MyGrammarParser.PrintStatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.match(MyGrammarParser.T__20)
                self.state = 135
                self.match(MyGrammarParser.T__6)
                self.state = 136
                self.expression(0)
                self.state = 137
                self.match(MyGrammarParser.T__10)
                self.state = 138
                self.match(MyGrammarParser.T__12)
                pass

            elif la_ == 5:
                localctx = MyGrammarParser.AssignStatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.identifier()
                self.state = 141
                self.match(MyGrammarParser.T__21)
                self.state = 142
                self.expression(0)
                self.state = 143
                self.match(MyGrammarParser.T__12)
                pass

            elif la_ == 6:
                localctx = MyGrammarParser.ArrayStatContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 145
                self.identifier()
                self.state = 146
                self.match(MyGrammarParser.T__8)
                self.state = 147
                self.expression(0)
                self.state = 148
                self.match(MyGrammarParser.T__9)
                self.state = 149
                self.match(MyGrammarParser.T__21)
                self.state = 150
                self.expression(0)
                self.state = 151
                self.match(MyGrammarParser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammarParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NewExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammarParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(MyGrammarParser.IdentifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewExpr" ):
                listener.enterNewExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewExpr" ):
                listener.exitNewExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewExpr" ):
                return visitor.visitNewExpr(self)
            else:
                return visitor.visitChildren(self)


    class ThisExprContext(ExpressionContext):
